# substrate-node-template

./: Cargo.toml
node/: Cargo.toml
node/src/: rpc.rs  service.rs
pallets/bets/: Cargo.toml  README.md
pallets/bets/src/: lib.rs  mock.rs  tests.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs
pallets/template-copy/: Cargo.toml
pallets/template-copy/src/: mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
